# kafka-bridge-client

./: LICENSE  README.md  pyproject.toml  requirements.txt
kafka_bridge_client/: __init__.py  consumer.py  exceptions.py  producer.py
