[tool.poetry]
name = "kafka-bridge-client"
version = "0.2.0"
description = "Python client for Strimzi Kafka Bridge"
authors = ["Bogdan Zaseka <zaseka.bogdan@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/shafa-dev/kafka-bridge-client"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
