[tool.poetry]
name = "kafka-bridge-client"
version = "0.5.1"
description = "Python client for Strimzi Kafka Bridge"
authors = ["Bogdan Zaseka <zaseka.bogdan@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/shafa-dev/kafka-bridge-client"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.7.4"
requests = "^2.27.1"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
